docs: add accept-language headers to openapi and postman specs
